fixed the error on nav bar not showing up in browser, added margin to bottom of li and created a border for home on the nav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ header {
     position: fixed;
     z-index: 99;
     width: 100%;
-    box-shadow: 0 2px 2pxx #3a3a3a;
+    box-shadow: 0 2px 2px #3a3a3a;
 }
 header a {
     text-decoration: none;
@@ -36,6 +36,21 @@ h1 {
     letter-spacing: 2pxx;
     color: #252525;
 }
+
+#menu {
+    font-size: 110%;
+    letter-spacing: 4px;
+    list-style-type: none;
+}
+
+#menu > li {
+    margin-bottom: 1em;
+}
+
+.active {
+    border-bottom: 1px solid #3a3a3a;
+}
+
 /* main color*/
 main {
     background-color: blue;
